--- a/NEWS.txt
+++ b/NEWS.txt
@@ -1,6 +1,29 @@
            libSBMLSim NEWS -- History of user-visible changes
 
-- Last modified: Sun, 06 Jan 2013 04:48:32 +0900
+- Last modified: Thu, 04 Apr 2013 02:56:39 +0900
+
+======================================================================
+Version 1.2.0 (2013-04-04)
+======================================================================
+
+* New features
+
+  - CMake uses C_INCLUDE_PATH, DYLD_LIBRARY_PATH and
+    LD_LIBRARY_PATH to find libSBML.
+
+* Bug fixes
+
+  - Fixed to support fast and reversible reaction
+    (00986, 00987, 00988).
+
+  - Fixed crash when ASTNode only have 1 or 0 child under '+', '*',
+    'AND', 'OR', 'XOR' ASTNodes. (01112, 01113, 01114)
+
+  - Fixed crash when piecewise have odd number of children (which
+    means when piecewise doesn't have "otherwise" node)
+    (01115, 01116).
+
+  Now, libsbmlsim passed all the tests from 00001 to 01185.
 
 ======================================================================
 Version 1.1.0 (2013-01-08)
