--- a/NEWS.txt
+++ b/NEWS.txt
@@ -1,6 +1,25 @@
            libSBMLSim NEWS -- History of user-visible changes
 
-- Last modified: Fri, 23 Dec 2016 00:25:55 +0900
+- Last modified: Tue, 05 Dec 2017 01:07:05 +0900
+
+======================================================================
+Version 1.4.0 (2017-12-05)
+======================================================================
+
+* New features
+
+  - New memory management system was included to avoid memory leak.
+
+* Bug fixes
+
+  - Several bug fixes on memory leak. Now, LibSBMLSim has small memory leak
+    on limited number of models (which include reversible fast reactions).
+
+  - Add support on CMake 3.x so that it can generate Java8 bindings.
+
+  - Fixed crash on python bindings which causes double free on gc.
+
+  libsbmlsim confirmed to pass SBML test cases from 00001 to 01185.
 
 ======================================================================
 Version 1.3.0 (2016-12-23)
